--- a/scss/components/_main-index.scss
+++ b/scss/components/_main-index.scss
@@ -1,5 +1,6 @@
 .index__main-top {
 	max-width: 1600px;
+	// max-width: var(--mobile);
 	padding: 200px 0;
 	margin: 0 auto;
 	background-repeat: no-repeat;
