--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,3 +20,8 @@
 @import './components/modal-btn';
 @import './components/backdrop';
 
+// <!-- ===============prototyp=============== -->
+
+@import './components/page-header';
+
+// <!-- ===============prototyp=============== -->
