--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -17,4 +17,8 @@
 	--modal-bs: rgba(0, 0, 0, 0.15);
 	--modal-border: rgba(33, 33, 33, 0.2);
 	--overlay-transparency: rgba(33, 150, 243, 0.9);
+
+	--mobile: 480px;
+	--tablet: 768px;
+	--desktop: 1200px;
 }
